[gd_scene load_steps=30 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/backpack_fullness.png" type="Texture" id=2]
[ext_resource path="res://assets/line.png" type="Texture" id=3]
[ext_resource path="res://assets/water11.png" type="Texture" id=4]
[ext_resource path="res://TransitionCam.gd" type="Script" id=5]
[ext_resource path="res://assets/jump_indicator.png" type="Texture" id=6]
[ext_resource path="res://assets/bombo.png" type="Texture" id=7]
[ext_resource path="res://Dash.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/parallax_1_3.png" type="Texture" id=9]
[ext_resource path="res://assets/parallax_2.png" type="Texture" id=10]
[ext_resource path="res://assets/parallax_3.png" type="Texture" id=11]
[ext_resource path="res://Camera2D.gd" type="Script" id=12]
[ext_resource path="res://assets/spotlight_smoothed.png" type="Texture" id=13]
[ext_resource path="res://assets/circleLight.png" type="Texture" id=14]
[ext_resource path="res://assets/bubble.png" type="Texture" id=15]
[ext_resource path="res://ChromAberrMat.tres" type="Material" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 7 )

[sub_resource type="Animation" id=15]
resource_name = "Dashing_right"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:material:shader_param/amount")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.5, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:material:shader_param/apply")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=14]
resource_name = "Falling"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle_Left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.97, 0.97 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle_Right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.97, 0.97 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump_Left"

[sub_resource type="Animation" id=13]
resource_name = "Lying"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 8 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:material:shader_param/amount")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:material:shader_param/apply")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Gradient" id=9]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.0129032, 0.167742 )
colors = PoolColorArray( 0.515571, 0.515571, 0.515571, 0.509804, 0.0117647, 0.0117647, 0.0117647, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Gradient" id=11]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.116129, 0.890323, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.08
emission_shape = 2
emission_box_extents = Vector3( 600, 170, 1 )
flag_disable_z = true
gravity = Vector3( 0, -8, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0
color = Color( 1, 1, 1, 0.180392 )
color_ramp = SubResource( 12 )
color_initial_ramp = SubResource( 10 )
anim_speed_random = 0.73

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 1 )

[node name="Spotlight" type="Light2D" parent="."]
texture = ExtResource( 13 )
offset = Vector2( 0, 112 )
color = Color( 0.980392, 0.670588, 0.670588, 1 )
energy = 0.5
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 10.0

[node name="CircleLight" type="Light2D" parent="."]
texture = ExtResource( 14 )
texture_scale = 0.3
energy = 0.5
shadow_enabled = true
shadow_gradient_length = 1.0
shadow_filter = 2
shadow_filter_smooth = 50.0

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 16 )
texture = ExtResource( 7 )
hframes = 9

[node name="JumpLoad" type="Sprite" parent="Sprite"]
modulate = Color( 0, 1.5, 4, 1 )
rotation = 3.14159
texture = ExtResource( 2 )
hframes = 8

[node name="JumpIndicator" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false
offset = Vector2( -8, 9 )
flip_v = true
hframes = 17
frame = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DirectionVisualizer" type="Line2D" parent="."]
position = Vector2( 0, 8 )
default_color = Color( 0.164706, 0.196078, 0.360784, 1 )
texture = ExtResource( 3 )
texture_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TrajPoint" type="Position2D" parent="."]
position = Vector2( 0, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="TransitionCam" type="Camera2D" parent="."]
visible = false
limit_left = 0
limit_top = 0
limit_right = 640
smoothing_enabled = true
smoothing_speed = 1.0
drag_margin_bottom = 0.1
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 640
limit_bottom = 5680
script = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera2D"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0, 0.4 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = -295.0
margin_top = -220.0
margin_right = -115.0
margin_bottom = 88.0
rect_scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/ParallaxLayer"]
position = Vector2( -320, -200 )
texture = ExtResource( 9 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Camera2D/ParallaxBackground/ParallaxLayer"]
margin_left = -256.0
margin_top = 4892.0
margin_right = 878.0
margin_bottom = 6892.0
color = Color( 0.0627451, 0.121569, 0.25098, 1 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
motion_scale = Vector2( 0, 0.6 )
motion_mirroring = Vector2( 0, 1000 )

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
modulate = Color( 1, 1, 1, 0.831373 )
motion_scale = Vector2( 0, 0.8 )
motion_mirroring = Vector2( 0, 1000 )

[node name="Sprite" type="Sprite" parent="Camera2D/ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dashing_right = SubResource( 15 )
anims/Falling = SubResource( 14 )
anims/Idle_Left = SubResource( 2 )
anims/Idle_Right = SubResource( 7 )
anims/Jump_Left = SubResource( 4 )
anims/Lying = SubResource( 13 )
anims/RESET = SubResource( 6 )

[node name="Dash" parent="." instance=ExtResource( 8 )]
self_modulate = Color( 1, 1, 1, 0.4 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 200 )
amount = 50
lifetime = 5.0
preprocess = 50.0
randomness = 0.54
visibility_rect = Rect2( -100, -100, 100, 200 )
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 15 )

[node name="LyingTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LyingTimer" to="." method="_on_LyingTimer_timeout"]
